8133896: Update javax.lang.model APIs
Reviewed-by: darcy, jjg